# skel

./: .gitignore  .local_vimrc.vim  Makefile  README  conf.clang++.mk  conf.g++.mk  conf.mk  configure.ac
dot_skel/.skel/c++/skeleton/: .gitignore  .local_vimrc.vim  Makefile  (+2 more)
dot_skel/c++/: Makefile
dot_skel/c++/src/: Makefile  main.cc
dot_skel/c++/test/: Makefile
dot_skel/c++_cli/skeleton/: Makefile
dot_skel/c++ac/: .gitignore  configure.ac
dot_skel/c++ac/src/: Makefile.am  dummy.cc  dummy.hh  main.cc
dot_skel/c++ac/test/: Makefile.am  dummy.cc  main.cc
dot_skel/c++ac/tools/: localvimrc
dot_skel/c++hh/: .gitignore  Makefile  conf.clang++.mk  conf.g++.mk
dot_skel/c++hh/src/: Makefile
dot_skel/c++hh/test/: Makefile
dot_skel/c++lib/: Makefile
dot_skel/c++lib/src/: Makefile
dot_skel/c++lib/test/: Makefile
dot_skel/c++lib/tools/: localvimrc
dot_skel/essay/: NAME.tex
dot_skel/essay/skeleton/: Makefile
lib/include/: catch
src/: Makefile  Makefile.am  application.cc  application.hh  command.hh  common.mk  config.hh  copy_part.cc  copy_part.hh  error.hh  expand_macros.cc  expand_macros.hh  instantiate_part.cc  instantiate_part.hh  instantiate_parts.cc  instantiate_parts.hh  instantiate_skeleton.cc  instantiate_skeleton.hh  instantiate_skeleton_error.hh  invalid_user_interface_input.hh  list_skeletons.cc  list_skeletons.hh  load_substitutions_map.cc  load_substitutions_map.hh  main.cc  mapping.cc  mapping.hh  memory.hh  mv.cc  mv.hh  parser.cc  parser.hh  parser_error.hh  personalize_skeleton.cc  personalize_skeleton.hh  print_message.cc  print_message.hh  rename_files.cc  rename_files.hh  rename_files_error.hh  (+14 more)
test/: Makefile  Makefile.am  common.mk  helpers.cc  helpers.hh  main.cc
tools/: localvimrc
(+40 files in other folders)
